<resources>
    <string name="app_name">Australia Clock</string>
    <string name="splashInfo">By Alex Ruth</string>
    <string name="splashInfo2">SID: 216106075</string>
    //Countries
    <string name="aus">Australia</string>
    <string name="adelaide">Adelaide</string>
    <string name="brisbane">Brisbane</string>
    <string name="canberra">Canberra</string>
    <string name="darwin">Darwin</string>
    <string name="hobart">Hobart</string>
    <string name="melbourne">Melbourne</string>
    <string name="perth">Perth</string>
    <string name="sydney">Sydney</string>

    // Buttons
    <string name="home_btn">Home</string>
    <string name="worldclock_btn">Australian Clock</string>
    <string name="settings_btn">Settings</string>
    <string name="login_btn">Login/Sign up</string>
    <string name="save_btn">Save</string>
    // home page
    <string name="defaulttime">Default time</string>
    // settings page
    <string name="background">Background</string>
    <string name="hometimesetting">Home page timezone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="rememberpass">Remember me?</string>

    <string-array name="homeTzSetting">
        <item>Adelaide</item>
        <item>Brisbane</item>
        <item>Canberra</item>
        <item>Darwin</item>
        <item>Hobart</item>
        <item>Melbourne</item>
        <item>Perth</item>
        <item>Sydney</item>
    </string-array>
</resources>
