<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.example.alex.ass2android.SplashScreen">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        android:textColor="#ffff"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"/>

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:src="@drawable/clock"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splashInfo"
        android:layout_marginTop="50sp"
        android:textColor="#ffff"
        android:textSize="50sp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splashInfo2"
        android:textColor="#ffff"
        android:textSize="30sp"
        android:layout_gravity="center"
        />


</LinearLayout>
