<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:id="@+id/testRL">
    <!-- title for page -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/settings_btn"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/settingsTitle"/>
    <!-- linear layouts for different settings -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/settingsTitle"
        android:orientation="horizontal"
        android:id="@+id/bgSettingLL">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/background"
            android:textColor="@color/black" />
        <!-- Will eventually use switch to change from the light blue background or another colour -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bgSwitch"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxTester"
            android:text="Hello"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/bgSettingLL">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hometimesetting"
            android:textColor="@color/black" />
        <!-- Will use this to select home page timezone from a list -->
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <!-- button layout code -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:onClick="goToHome"
            android:orientation="horizontal"
            android:text="@string/home_btn"
            android:textSize="12sp" />
    </LinearLayout>


</RelativeLayout>

