<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:id="@+id/mainRL">
    <!-- dummy clock image to hopefully later be replaced by a functioning clock that will
    show correct time -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/clock" />

    <TextClock
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:id="@+id/homeClock"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:text="@string/localtime"
        android:textAlignment="center"
        android:textSize="20sp" />

    <!-- button layout code -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true">

        <Button
            android:id="@+id/worldClock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToTimezones"
            android:text="@string/worldclock_btn"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/settings_btn"
            android:onClick="goToSettings"
            android:id="@+id/settingsBtn"
            android:textSize="20sp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/login_btn"
            android:textSize="20sp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:id="@+id/testButton"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>
